@@ -1,19 +1,18 @@
 package livelessons.streamgangs;
 
-import io.reactivex.rxjava3.core.Observable;
-import io.reactivex.rxjava3.schedulers.Schedulers;
 import livelessons.utils.SearchResults;
+import rx.Observable;
+import rx.schedulers.Schedulers;
 
 import java.util.List;
-import java.util.concurrent.ForkJoinPool;
 
 import static java.util.stream.Collectors.toList;
 import static livelessons.utils.StreamsUtils.not;
 
 /**
- * Customizes the SearchStreamGang framework to use RxJava to search
- * in parallel how many times each phrase in an array of phrases
- * appears in input data.
+ * Customizes the SearchStreamGang framework to use RxJava in
+ * conjunction with Java Streams to search how many times each phrase
+ * in an array of phrases appears in input data.
  */
 public class SearchWithRxJavaPhrases
         extends SearchStreamGang {
@@ -24,60 +23,64 @@ public class SearchWithRxJavaPhrases
                                    List<List<CharSequence>> stringsToSearch) {
         // Pass input to superclass constructor.
         super(phrasesToFind,
-              stringsToSearch);
+                stringsToSearch);
     }
 
     /**
      * Perform the processing, which uses an RxJava Stream to
      * concurrently search for phrases in the input data.
      */
-    @Override
-    protected List<List<SearchResults>> processStream() {
-        return Observable
-            // Converts mPhrasesToFind array into an Observable that
-            // emits the items in the array.
-            .fromIterable(mPhrasesToFind)
+   @Override
+   protected List<List<SearchResults>> processStream() {
+       return Observable
+           // Converts mPhrasesToFind array into an Observable that
+           // emits the items in the array.
+           .from(mPhrasesToFind)
 
-            // Return an Observable that applies the searchForPhrase()
-            // method to each item emitted by the source Observable
-            // and uses flatMap() to create one Observable that emits
-            // SearchResults.
-            .flatMap(phrase -> Observable
-                     // Returns an Observable that emits a single phrase
-                     // and then completes.
-                     .just(phrase)
+           // Returns an Observable that emits items based on applying
+           // processPhrase() to each item emitted by the source
+           // Observable, where processPhrase() returns an Observable,
+           // and then merging the resulting Observables and emitting
+           // the results of this merger as a single Observable.
+           .flatMap(phrase ->
+                    Observable
+                    // Returns an Observable that emits a single phrase
+                    // and then completes.
+                    .just(phrase)
 
-                     // Returns an Observable that applies the
-                     // processPhrase() method to each item emitted by
-                     // the source Observable and emits a list of
-                     // SearchResults.
-                     .flatMap(this::processPhrase)
+                    // Returns an Observable that applies the
+                    // processPhrase() method to each item emitted by
+                    // the source Observable and emits a list of
+                    // SearchResults.
+                    .map(this::processPhrase)
 
-                     // Asynchronously subscribes Observers to this
-                     // Observable on the computation scheduler.
-                     .subscribeOn(Schedulers.from(ForkJoinPool.commonPool())))
+                    // Asynchronously subscribes Observers to this
+                    // Observable on the computation scheduler.
+                    .subscribeOn(Schedulers.computation()))
 
-            // Returns an Observable that emits a single list composed
-            // of all the items emitted by the source Observable,
-            // which is itself a list of SearchResults.
-            .toList()
+           // Returns an Observable that emits a single item: a list
+           // composed of all the items emitted by the source
+           // Observable, which is itself a list of SearchResults.
+           .toList()
 
-            // Converts an Observable into a BlockingObservable (an
-            // Observable with blocking operators) and then block
-            // until the final result is available.
-            .blockingGet();
-    }
+           // Converts an Observable into a BlockingObservable (an
+           // Observable with blocking operators).
+           .toBlocking()
+
+           // When the blocking observable emits the single list of
+           // SearchResults item and completes, return that list.
+           .single();
+   }
 
     /**
      * Search all the input strings for all occurrences of the phrase to
      * find.
      */
-    private Observable<List<SearchResults>> processPhrase(String phrase) {
+    private List<SearchResults> processPhrase(String phrase) {
      	// Get the input.
-        return Observable
-            // Converts input strings list into an Observable that
-            // emits the items in the list.
-            .fromIterable(getInput())
+        return getInput()
+            // Sequentially process each String in the input list.
+            .stream()
 
             // Map each input string to a stream of SearchResults for
             // each time the phrase appears in the input.
@@ -97,14 +100,11 @@ public class SearchWithRxJavaPhrases
                 })
 
             // Only keep a result that has at least one match.
-            .filter(result -> result.size() > 0)
+            .filter(not(SearchResults::isEmpty))
+            // Filtering can also be done as
+            // .filter(result -> result.size() > 0)
 
-            // Returns a Single that emits a single item, which is
-            // composed of all the items emitted by the source
-            // Observable, which is itself a list of SearchResults.
-            .toList()
-
-            // And then convert the single back to an observable.
-            .toObservable();
+            // Create a list of SearchResults.
+            .collect(toList());
     }
 }
